--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,6 +1,69 @@
-/* Подключение шрифтов: Montserrat (геометрический, для заголовков и акцентов) и Merriweather (с засечками, для текста) */
-@import url('https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,400;0,700;1,400;1,700&family=Montserrat:wght@700;900&display=swap');
+/* --- СКАЧАННЫЕ ЛОКАЛЬНЫЕ ШРИФТЫ (@font-face) --- */
 
+/* Montserrat (Variable Font) */
+@font-face {
+  font-family: 'Montserrat';
+  font-style: normal;
+  /* Указываем диапазон толщин, который поддерживает Variable Font */
+  font-weight: 100 900; 
+  font-display: swap; 
+  src: url('../fonts/Montserrat-VariableFont_wght.ttf') format('truetype');
+}
+
+/* Montserrat Italic (Variable Font) */
+@font-face {
+  font-family: 'Montserrat';
+  font-style: italic;
+  font-weight: 100 900;
+  font-display: swap;
+  src: url('../fonts/Montserrat-Italic-VariableFont_wght.ttf') format('truetype');
+}
+
+/* Merriweather (Variable Font) */
+@font-face {
+  font-family: 'Merriweather';
+  font-style: normal;
+  /* Указываем диапазон толщин */
+  font-weight: 300 900; 
+  font-display: swap;
+  src: url('../fonts/Merriweather-VariableFont_opsz,wdth,wght.ttf') format('truetype');
+}
+
+/* Merriweather Italic (Variable Font) */
+@font-face {
+  font-family: 'Merriweather';
+  font-style: italic;
+  font-weight: 300 900;
+  font-display: swap;
+  src: url('../fonts/Merriweather-Italic-VariableFont_opsz,wdth,wght.ttf') format('truetype');
+}
+
+/* ---------------------------------------------------- */
+/* (Остальной CSS-код, который вы предоставили, остается без изменений) */
+
+/* *** НОВЫЕ СТИЛИ ДЛЯ ЗАМЕНЫ ИКОНОК *** */
+.hamburger span {
+    font-size: 1.5rem; 
+    line-height: 1;
+}
+
+#scroll-to-top span {
+    font-size: 1.2rem;
+}
+
+.primary-btn .map-icon {
+    margin-left: 10px;
+    font-size: 1.1em;
+    line-height: 1; /* Убедимся, что символ хорошо выровнен */
+}
+
+/* Для кнопки "Вернуться" на странице museum-map.html */
+.primary-btn .back-arrow {
+    font-size: 1.1em;
+    margin-right: 10px;
+    /* Убедимся, что символ хорошо выровнен */
+    line-height: 1; 
+}
 
 /* Основные переменные цветов */
 :root {
