--- a/templates/museum_map.html
+++ b/templates/museum_map.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Интерактивная карта и 3D-тур | Музей</title>
 
-    <!-- Оптимизация: Предварительно загружаем наши локальные шрифты (Variable Fonts). -->
-    <link rel="preload" href="{{ url_for('static', filename='fonts/Montserrat-VariableFont_wght.ttf') }}" as="font" type="font/ttf" crossorigin>
-    <link rel="preload" href="{{ url_for('static', filename='fonts/Merriweather-VariableFont_opsz,wdth,wght.ttf') }}" as="font" type="font/ttf" crossorigin>
+    <!-- Оптимизация: Предварительно загружаем наши локальные WOFF2 шрифты. -->
+    <link rel="preload" href="{{ url_for('static', filename='fonts/Montserrat-Black.woff2') }}" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="{{ url_for('static', filename='fonts/Merriweather-Regular.woff2') }}" as="font" type="font/woff2" crossorigin>
 
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
     <!-- УДАЛЕНО: <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"> -->
